feat:开发产品页

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -24,3 +24,10 @@
 .html-weakness {
   filter: invert(80%);
 }
+
+
+// 定义默认货币图标样式
+.fi {
+  width: 100px !important;
+  height: 100px !important;
+}
